# synqro

./: .gitignore  CI_PIPELINE.md  CODEOWNERS  Cargo.toml  PUBLISHING_GUIDE.md  README.md  SECURITY.md  STRATEGIC_ROADMAP.md  Synqro_SecurePrompt.md  deny.toml  pyproject.toml  rust-toolchain.toml  synqro.podspec  synqro_manifest.json.example
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bootstrap-lockfile.yml  ci.yml  release.yml
ffi/: synqro.h
ffi/dart/: CHANGELOG.md  LICENSE  pubspec.yaml
ffi/dart/lib/: synqro.dart
ffi/python/: synqro.py
scripts/: build-android.sh  build-wasm.sh  post_install.py  sign-artifact.sh
src/: audit.rs  config.rs  downloader.rs  error.rs  lib.rs  rollback.rs
src/keychain/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
synqro/: __init__.py
synqro/reporter/: __init__.py  telegram_bot.py
wasm/: package.json
