[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synqro"
version = "0.1.0"
description = "Synqro Zero-Trust OTA Updater Python SDK and Reporter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ota", "updater", "security", "zero-trust", "cryptography", "verification", "embedded"]
authors = [
    { name = "Synqro Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiogram>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/MrGuevar4/synqro"
Documentation = "https://github.com/MrGuevar4/synqro#readme"
Repository = "https://github.com/MrGuevar4/synqro.git"
Issues = "https://github.com/MrGuevar4/synqro/issues"

[tool.hatch.build.targets.wheel]
packages = ["synqro"]
